--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -11,14 +11,12 @@
         android:id="@+id/instrumentName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="8dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginRight="8dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginLeft="@dimen/item_margin"
+        android:layout_marginRight="@dimen/item_margin"
+        android:layout_marginTop="@dimen/default_margin"
         android:text="TextView"
         android:textAppearance="@style/TextAppearance.AppCompat.Button"
-        android:textSize="18sp"
+        android:textSize="@dimen/item_name"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -28,29 +26,25 @@
         android:id="@+id/bidView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="32dp"
-        android:layout_marginStart="32dp"
-        android:layout_marginTop="16dp"
-        android:text="TextView"
-        android:textColor="#939393"
-        android:textSize="16sp"
+        android:layout_marginLeft="@dimen/properties"
+        android:layout_marginTop="@dimen/default_margin"
+        android:textColor="@color/json_features"
+        android:textSize="@dimen/properties_text"
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/instrumentName"
-        tools:text="BIDDING" />
+        tools:text="@string/bid" />
 
     <TextView
         android:id="@+id/offerView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="32dp"
-        android:layout_marginRight="32dp"
-        android:layout_marginTop="16dp"
-        android:text="TextView"
-        android:textColor="#939393"
-        android:textSize="16sp"
+        android:layout_marginRight="@dimen/properties"
+        android:layout_marginTop="@dimen/default_margin"
+        android:textColor="@color/json_features"
+        android:textSize="@dimen/properties_text"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/instrumentName"
-        tools:text="OFFER" />
+        tools:text="@string/offer" />
 </android.support.constraint.ConstraintLayout>
