--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -5,4 +5,6 @@
     <dimen name="main_text">24sp</dimen>
     <dimen name="properties">32dp</dimen>
     <dimen name="properties_text">16sp</dimen>
+    <dimen name="item_margin">8dp</dimen>
+    <dimen name="item_name">18sp</dimen>
 </resources>
