--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -3,48 +3,28 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="?android:attr/listPreferredItemHeightLarge">
+    style="@style/listItem_layout_style">
 
 
     <TextView
         android:id="@+id/instrumentName"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="@dimen/item_margin"
-        android:layout_marginRight="@dimen/item_margin"
-        android:layout_marginTop="@dimen/default_margin"
-        android:text="TextView"
-        android:textAppearance="@style/TextAppearance.AppCompat.Button"
-        android:textSize="@dimen/item_name"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        tools:text="Instruments name" />
+        tools:text="Instruments name"
+        style="@style/instrumentName_style" />
 
     <TextView
         android:id="@+id/bidView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="@dimen/properties"
-        android:layout_marginTop="@dimen/default_margin"
-        android:textColor="@color/json_features"
-        android:textSize="@dimen/properties_text"
-        android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/instrumentName"
-        tools:text="@string/bid" />
+        tools:text="@string/bid"
+        style="@style/listItem_bid_style" />
 
     <TextView
         android:id="@+id/offerView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginRight="@dimen/properties"
-        android:layout_marginTop="@dimen/default_margin"
-        android:textColor="@color/json_features"
-        android:textSize="@dimen/properties_text"
-        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/instrumentName"
-        tools:text="@string/offer" />
+        tools:text="@string/offer"
+        style="@style/listItem_offer_style" />
 </android.support.constraint.ConstraintLayout>
